// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> spinner is not spinning properly renders a spinner 1`] = `
<WithTheme(Spinner)
  spin={false}
>
  <Spinner
    color="monochrome.black"
    diameter="40px"
    spin={false}
    theme={
      Object {
        "avatarFontSizes": Object {
          "default": "0.6875rem",
          "medium": "0.75rem",
        },
        "avatarSizes": Object {
          "default": "24px",
          "medium": "32px",
        },
        "borderWidth": Object {
          "large": "4px",
          "medium": "2px",
          "small": "1px",
        },
        "borders": Object {
          "default": "1px solid #E0E1E2",
        },
        "brandFont": "Motiva Sans",
        "breakpoints": Array [
          "512px",
          "768px",
          "1024px",
          "1600px",
        ],
        "breakpointsMap": Object {
          "lg": "1024px",
          "md": "768px",
          "sm": "512px",
          "xl": "1600px",
        },
        "buttons": Object {
          "sizes": Object {
            "jumbo": Object {
              "fontSize": "0.875rem",
              "height": "3rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1.5rem",
                },
                "&:last-child": Object {
                  "mr": "-1.5rem",
                },
                "fontSize": "1rem",
                "width": "3rem",
              },
              "p": "0 1.5rem",
            },
            "large": Object {
              "fontSize": "0.875rem",
              "height": "2.5rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1.25rem",
                },
                "&:last-child": Object {
                  "mr": "-1.25rem",
                },
                "fontSize": "0.875rem",
                "width": "2.5rem",
              },
              "p": "0 1.25rem",
            },
            "medium": Object {
              "fontSize": "0.8125rem",
              "height": "2rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1rem",
                },
                "&:last-child": Object {
                  "mr": "-1rem",
                },
                "fontSize": "0.75rem",
                "width": "2rem",
              },
              "p": "0 1rem",
            },
            "small": Object {
              "fontSize": "0.75rem",
              "height": "1.5rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-0.75rem",
                },
                "&:last-child": Object {
                  "mr": "-0.75rem",
                },
                "fontSize": "0.6875rem",
                "width": "1.5rem",
              },
              "p": "0 0.75rem",
            },
          },
        },
        "colors": Object {
          "background": Object {
            "default": "#F2F2F2",
            "disabled": "#EBECEC",
            "muted": "#F8F9F9",
            "white": "#FFFFFF",
          },
          "black": "#000000",
          "blue": "#4466EE",
          "blueDark": "#4455CC",
          "blueDarkest": "#2E374E",
          "blueLight": "#5577FF",
          "blueLighter": "#6688FF",
          "border": Object {
            "dark": "#5B5D61",
            "default": "#E0E1E2",
            "muted": "#EBECEC",
          },
          "brand": Object {
            "dark": "#081D17",
            "darker": "#081D17",
            "default": "#081D17",
            "light": "#B6EFD0",
            "lighter": "#C0F9DA",
          },
          "bronze": "#CC7700",
          "bronzeDark": "#AA5500",
          "bronzeLight": "#CC9900",
          "green": "#00AA44",
          "greenDark": "#008833",
          "greenLight": "#00BB44",
          "greenLighter": "#00CC66",
          "grey10": "#F8F9F9",
          "grey100": "#0F0F10",
          "grey20": "#F2F2F2",
          "grey30": "#EBECEC",
          "grey40": "#E0E1E2",
          "grey50": "#BEBEC0",
          "grey60": "#989A9C",
          "grey70": "#78797D",
          "grey80": "#5B5D61",
          "grey90": "#25272D",
          "icon": Object {
            "default": "#989A9C",
            "disabled": "rgba(190,190,192,0.7)",
          },
          "intent": Object {
            "brand": Object {
              "dark": "#081D17",
              "darker": "#081D17",
              "default": "#081D17",
              "light": "#B6EFD0",
              "lighter": "#C0F9DA",
            },
            "danger": Object {
              "dark": "#6c1c1c",
              "darker": "#2b0b0b",
              "default": "#D93838",
              "light": "#f3c3c3",
              "lighter": "#fbebeb",
            },
            "info": Object {
              "dark": "#213175",
              "darker": "#0d132e",
              "default": "#4263EB",
              "light": "#c6d0f9",
              "lighter": "#eceffd",
            },
            "success": Object {
              "dark": "#14431d",
              "darker": "#081a0b",
              "default": "#29863A",
              "light": "#bedac3",
              "lighter": "#e9f2eb",
            },
            "warning": Object {
              "dark": "#622902",
              "darker": "#271000",
              "default": "#C55205",
              "light": "#edcbb4",
              "lighter": "#f9ede6",
            },
          },
          "monochrome": Object {
            "black": "#000000",
            "grey10": "#F8F9F9",
            "grey100": "#0F0F10",
            "grey20": "#F2F2F2",
            "grey30": "#EBECEC",
            "grey40": "#E0E1E2",
            "grey50": "#BEBEC0",
            "grey60": "#989A9C",
            "grey70": "#78797D",
            "grey80": "#5B5D61",
            "grey90": "#25272D",
            "white": "#FFFFFF",
          },
          "palette": Object {
            "blue": Object {
              "dark": "#213175",
              "darker": "#0d132e",
              "default": "#4263EB",
              "light": "#c6d0f9",
              "lighter": "#eceffd",
            },
            "brand": Object {
              "dark": "#040e0b",
              "darker": "#010504",
              "default": "#081D17",
              "light": "#b4bbb9",
              "lighter": "#e6e8e7",
            },
            "cyan": Object {
              "dark": "#063f48",
              "darker": "#02191c",
              "default": "#0D7F91",
              "light": "#b6d8de",
              "lighter": "#e6f2f4",
            },
            "green": Object {
              "dark": "#14431d",
              "darker": "#081a0b",
              "default": "#29863A",
              "light": "#bedac3",
              "lighter": "#e9f2eb",
            },
            "neutral": Object {
              "dark": "#070708",
              "darker": "#020203",
              "default": "#0F0F10",
              "light": "#b7b7b7",
              "lighter": "#e7e7e7",
            },
            "orange": Object {
              "dark": "#622902",
              "darker": "#271000",
              "default": "#C55205",
              "light": "#edcbb4",
              "lighter": "#f9ede6",
            },
            "pink": Object {
              "dark": "#6b1936",
              "darker": "#2a0a15",
              "default": "#D6336C",
              "light": "#f2c1d2",
              "lighter": "#faeaf0",
            },
            "purple": Object {
              "dark": "#382474",
              "darker": "#160e2e",
              "default": "#7048E8",
              "light": "#d4c8f8",
              "lighter": "#f0ecfc",
            },
            "red": Object {
              "dark": "#6c1c1c",
              "darker": "#2b0b0b",
              "default": "#D93838",
              "light": "#f3c3c3",
              "lighter": "#fbebeb",
            },
            "teal": Object {
              "dark": "#044231",
              "darker": "#011a13",
              "default": "#098562",
              "light": "#b5dacf",
              "lighter": "#e6f2ef",
            },
            "yellow": Object {
              "dark": "#513400",
              "darker": "#201400",
              "default": "#A36900",
              "light": "#e3d2b2",
              "lighter": "#f5f0e5",
            },
          },
          "primary": Object {
            "blue": "#4263EB",
            "cyan": "#0D7F91",
            "green": "#29863A",
            "neutral": "#0F0F10",
            "orange": "#C55205",
            "pink": "#D6336C",
            "purple": "#7048E8",
            "red": "#D93838",
            "teal": "#098562",
            "yellow": "#A36900",
          },
          "red": "#EE2200",
          "redDark": "#DD1100",
          "redLight": "#FF4444",
          "redLighter": "#FF6655",
          "secondary": Object {
            "blue": "#4B9BFF",
            "cyan": "#5FC8FF",
            "green": "#9BE169",
            "orange": "#FFB46E",
            "pink": "#FF73C3",
            "purple": "#AF78FF",
            "red": "#FF5F5F",
            "teal": "#50D2A0",
            "yellow": "#FFD76E",
          },
          "shadow": Object {
            "blurry": "rgba(37,39,45,0.3)",
            "border": "rgba(37,39,45,0.47)",
          },
          "text": Object {
            "dark": "#0F0F10",
            "default": "#25272D",
            "disabled": "rgba(120,121,125,0.7)",
            "muted": "#5B5D61",
            "placeholder": "#989A9C",
          },
          "white": "#FFFFFF",
        },
        "fontSizes": Object {
          "input": Object {
            "default": "0.875rem",
            "mobile": "1rem",
          },
          "size1": "0.6875rem",
          "size2": "0.75rem",
          "size3": "0.8125rem",
          "size4": "0.875rem",
          "size5": "1rem",
          "size6": "1.25rem",
          "size7": "1.5rem",
          "size8": "1.75rem",
          "size9": "2.125rem",
        },
        "fontWeights": Object {
          "bold": 700,
          "medium": 500,
          "regular": 400,
        },
        "fonts": Object {
          "default": "Motiva Sans",
          "icon": "Arbor",
        },
        "iconFontPrefix": "ar",
        "icons": Object {
          "annotation": "039",
          "calendar": "035",
          "caret": "037",
          "chatBubbleOutline": "003",
          "checkboxChecked": "030",
          "checkboxIndeterminate": "02f",
          "checkboxMarkedCircleOutline": "000",
          "chevron": "03a",
          "crLogo": "02e",
          "cross": "03b",
          "download": "004",
          "swap": "038",
          "symbolCircle": "034",
          "thumbDownOutline": "001",
          "thumbUpOutline": "002",
          "trash": "036",
        },
        "lineHeights": Object {
          "large": 1.5,
          "regular": 1,
          "small": 1.25,
        },
        "radii": Object {
          "large": "6px",
          "larger": "12px",
          "small": "3px",
        },
        "shadows": Object {
          "elevation0": "0 0 1px rgba(37,39,45,0.47)",
          "elevation1": "0 0 1px rgba(37,39,45,0.47), 0 2px 4px -2px rgba(37,39,45,0.3)",
          "elevation2": "0 0 1px rgba(37,39,45,0.47), 0 5px 8px -4px rgba(37,39,45,0.3)",
          "elevation3": "0 0 1px rgba(37,39,45,0.47), 0 8px 10px -4px rgba(37,39,45,0.3)",
          "elevation4": "0 0 1px rgba(37,39,45,0.47), 0 16px 24px -8px rgba(37,39,45,0.3)",
        },
        "space": Object {
          "large": "1.5rem",
          "larger": "2rem",
          "largest": "4rem",
          "regular": "1rem",
          "small": "0.75rem",
          "smaller": "0.5rem",
          "smallest": "0.25rem",
        },
      }
    }
  />
</WithTheme(Spinner)>
`;

exports[`<Spinner /> spinner is spinning properly renders a spinner 1`] = `
@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0.5;
    -webkit-transform: scale(0.6);
    -moz-transform: scale(0.6);
    -ms-transform: scale(0.6);
    transform: scale(0.6);
  }

  40% {
    opacity: 1;
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #000000;
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  position: relative;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #000000;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-1:before {
  content: '';
  display: block;
  width: 15%;
  height: 15%;
  background-color: #000000;
  border-radius: 100%;
  -webkit-animation: animation-0 1.2s infinite ease-in-out both;
  animation: animation-0 1.2s infinite ease-in-out both;
}

.emotion-1:nth-child(1) {
  -webkit-transform: rotate(30deg);
  -moz-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg);
}

.emotion-1:nth-child(2) {
  -webkit-transform: rotate(60deg);
  -moz-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}

.emotion-1:nth-child(3) {
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-1:nth-child(4) {
  -webkit-transform: rotate(120deg);
  -moz-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.emotion-1:nth-child(5) {
  -webkit-transform: rotate(150deg);
  -moz-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  transform: rotate(150deg);
}

.emotion-1:nth-child(6) {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-1:nth-child(7) {
  -webkit-transform: rotate(210deg);
  -moz-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  transform: rotate(210deg);
}

.emotion-1:nth-child(8) {
  -webkit-transform: rotate(240deg);
  -moz-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}

.emotion-1:nth-child(9) {
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.emotion-1:nth-child(10) {
  -webkit-transform: rotate(300deg);
  -moz-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}

.emotion-1:nth-child(11) {
  -webkit-transform: rotate(330deg);
  -moz-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  transform: rotate(330deg);
}

.emotion-1:nth-child(1):before {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.emotion-1:nth-child(2):before {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.emotion-1:nth-child(3):before {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.emotion-1:nth-child(4):before {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.emotion-1:nth-child(5):before {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

.emotion-1:nth-child(6):before {
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}

.emotion-1:nth-child(7):before {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}

.emotion-1:nth-child(8):before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.emotion-1:nth-child(9):before {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.emotion-1:nth-child(10):before {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

.emotion-1:nth-child(11):before {
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

<WithTheme(Spinner)
  spin={true}
>
  <Spinner
    color="monochrome.black"
    diameter="40px"
    spin={true}
    theme={
      Object {
        "avatarFontSizes": Object {
          "default": "0.6875rem",
          "medium": "0.75rem",
        },
        "avatarSizes": Object {
          "default": "24px",
          "medium": "32px",
        },
        "borderWidth": Object {
          "large": "4px",
          "medium": "2px",
          "small": "1px",
        },
        "borders": Object {
          "default": "1px solid #E0E1E2",
        },
        "brandFont": "Motiva Sans",
        "breakpoints": Array [
          "512px",
          "768px",
          "1024px",
          "1600px",
        ],
        "breakpointsMap": Object {
          "lg": "1024px",
          "md": "768px",
          "sm": "512px",
          "xl": "1600px",
        },
        "buttons": Object {
          "sizes": Object {
            "jumbo": Object {
              "fontSize": "0.875rem",
              "height": "3rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1.5rem",
                },
                "&:last-child": Object {
                  "mr": "-1.5rem",
                },
                "fontSize": "1rem",
                "width": "3rem",
              },
              "p": "0 1.5rem",
            },
            "large": Object {
              "fontSize": "0.875rem",
              "height": "2.5rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1.25rem",
                },
                "&:last-child": Object {
                  "mr": "-1.25rem",
                },
                "fontSize": "0.875rem",
                "width": "2.5rem",
              },
              "p": "0 1.25rem",
            },
            "medium": Object {
              "fontSize": "0.8125rem",
              "height": "2rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1rem",
                },
                "&:last-child": Object {
                  "mr": "-1rem",
                },
                "fontSize": "0.75rem",
                "width": "2rem",
              },
              "p": "0 1rem",
            },
            "small": Object {
              "fontSize": "0.75rem",
              "height": "1.5rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-0.75rem",
                },
                "&:last-child": Object {
                  "mr": "-0.75rem",
                },
                "fontSize": "0.6875rem",
                "width": "1.5rem",
              },
              "p": "0 0.75rem",
            },
          },
        },
        "colors": Object {
          "background": Object {
            "default": "#F2F2F2",
            "disabled": "#EBECEC",
            "muted": "#F8F9F9",
            "white": "#FFFFFF",
          },
          "black": "#000000",
          "blue": "#4466EE",
          "blueDark": "#4455CC",
          "blueDarkest": "#2E374E",
          "blueLight": "#5577FF",
          "blueLighter": "#6688FF",
          "border": Object {
            "dark": "#5B5D61",
            "default": "#E0E1E2",
            "muted": "#EBECEC",
          },
          "brand": Object {
            "dark": "#081D17",
            "darker": "#081D17",
            "default": "#081D17",
            "light": "#B6EFD0",
            "lighter": "#C0F9DA",
          },
          "bronze": "#CC7700",
          "bronzeDark": "#AA5500",
          "bronzeLight": "#CC9900",
          "green": "#00AA44",
          "greenDark": "#008833",
          "greenLight": "#00BB44",
          "greenLighter": "#00CC66",
          "grey10": "#F8F9F9",
          "grey100": "#0F0F10",
          "grey20": "#F2F2F2",
          "grey30": "#EBECEC",
          "grey40": "#E0E1E2",
          "grey50": "#BEBEC0",
          "grey60": "#989A9C",
          "grey70": "#78797D",
          "grey80": "#5B5D61",
          "grey90": "#25272D",
          "icon": Object {
            "default": "#989A9C",
            "disabled": "rgba(190,190,192,0.7)",
          },
          "intent": Object {
            "brand": Object {
              "dark": "#081D17",
              "darker": "#081D17",
              "default": "#081D17",
              "light": "#B6EFD0",
              "lighter": "#C0F9DA",
            },
            "danger": Object {
              "dark": "#6c1c1c",
              "darker": "#2b0b0b",
              "default": "#D93838",
              "light": "#f3c3c3",
              "lighter": "#fbebeb",
            },
            "info": Object {
              "dark": "#213175",
              "darker": "#0d132e",
              "default": "#4263EB",
              "light": "#c6d0f9",
              "lighter": "#eceffd",
            },
            "success": Object {
              "dark": "#14431d",
              "darker": "#081a0b",
              "default": "#29863A",
              "light": "#bedac3",
              "lighter": "#e9f2eb",
            },
            "warning": Object {
              "dark": "#622902",
              "darker": "#271000",
              "default": "#C55205",
              "light": "#edcbb4",
              "lighter": "#f9ede6",
            },
          },
          "monochrome": Object {
            "black": "#000000",
            "grey10": "#F8F9F9",
            "grey100": "#0F0F10",
            "grey20": "#F2F2F2",
            "grey30": "#EBECEC",
            "grey40": "#E0E1E2",
            "grey50": "#BEBEC0",
            "grey60": "#989A9C",
            "grey70": "#78797D",
            "grey80": "#5B5D61",
            "grey90": "#25272D",
            "white": "#FFFFFF",
          },
          "palette": Object {
            "blue": Object {
              "dark": "#213175",
              "darker": "#0d132e",
              "default": "#4263EB",
              "light": "#c6d0f9",
              "lighter": "#eceffd",
            },
            "brand": Object {
              "dark": "#040e0b",
              "darker": "#010504",
              "default": "#081D17",
              "light": "#b4bbb9",
              "lighter": "#e6e8e7",
            },
            "cyan": Object {
              "dark": "#063f48",
              "darker": "#02191c",
              "default": "#0D7F91",
              "light": "#b6d8de",
              "lighter": "#e6f2f4",
            },
            "green": Object {
              "dark": "#14431d",
              "darker": "#081a0b",
              "default": "#29863A",
              "light": "#bedac3",
              "lighter": "#e9f2eb",
            },
            "neutral": Object {
              "dark": "#070708",
              "darker": "#020203",
              "default": "#0F0F10",
              "light": "#b7b7b7",
              "lighter": "#e7e7e7",
            },
            "orange": Object {
              "dark": "#622902",
              "darker": "#271000",
              "default": "#C55205",
              "light": "#edcbb4",
              "lighter": "#f9ede6",
            },
            "pink": Object {
              "dark": "#6b1936",
              "darker": "#2a0a15",
              "default": "#D6336C",
              "light": "#f2c1d2",
              "lighter": "#faeaf0",
            },
            "purple": Object {
              "dark": "#382474",
              "darker": "#160e2e",
              "default": "#7048E8",
              "light": "#d4c8f8",
              "lighter": "#f0ecfc",
            },
            "red": Object {
              "dark": "#6c1c1c",
              "darker": "#2b0b0b",
              "default": "#D93838",
              "light": "#f3c3c3",
              "lighter": "#fbebeb",
            },
            "teal": Object {
              "dark": "#044231",
              "darker": "#011a13",
              "default": "#098562",
              "light": "#b5dacf",
              "lighter": "#e6f2ef",
            },
            "yellow": Object {
              "dark": "#513400",
              "darker": "#201400",
              "default": "#A36900",
              "light": "#e3d2b2",
              "lighter": "#f5f0e5",
            },
          },
          "primary": Object {
            "blue": "#4263EB",
            "cyan": "#0D7F91",
            "green": "#29863A",
            "neutral": "#0F0F10",
            "orange": "#C55205",
            "pink": "#D6336C",
            "purple": "#7048E8",
            "red": "#D93838",
            "teal": "#098562",
            "yellow": "#A36900",
          },
          "red": "#EE2200",
          "redDark": "#DD1100",
          "redLight": "#FF4444",
          "redLighter": "#FF6655",
          "secondary": Object {
            "blue": "#4B9BFF",
            "cyan": "#5FC8FF",
            "green": "#9BE169",
            "orange": "#FFB46E",
            "pink": "#FF73C3",
            "purple": "#AF78FF",
            "red": "#FF5F5F",
            "teal": "#50D2A0",
            "yellow": "#FFD76E",
          },
          "shadow": Object {
            "blurry": "rgba(37,39,45,0.3)",
            "border": "rgba(37,39,45,0.47)",
          },
          "text": Object {
            "dark": "#0F0F10",
            "default": "#25272D",
            "disabled": "rgba(120,121,125,0.7)",
            "muted": "#5B5D61",
            "placeholder": "#989A9C",
          },
          "white": "#FFFFFF",
        },
        "fontSizes": Object {
          "input": Object {
            "default": "0.875rem",
            "mobile": "1rem",
          },
          "size1": "0.6875rem",
          "size2": "0.75rem",
          "size3": "0.8125rem",
          "size4": "0.875rem",
          "size5": "1rem",
          "size6": "1.25rem",
          "size7": "1.5rem",
          "size8": "1.75rem",
          "size9": "2.125rem",
        },
        "fontWeights": Object {
          "bold": 700,
          "medium": 500,
          "regular": 400,
        },
        "fonts": Object {
          "default": "Motiva Sans",
          "icon": "Arbor",
        },
        "iconFontPrefix": "ar",
        "icons": Object {
          "annotation": "039",
          "calendar": "035",
          "caret": "037",
          "chatBubbleOutline": "003",
          "checkboxChecked": "030",
          "checkboxIndeterminate": "02f",
          "checkboxMarkedCircleOutline": "000",
          "chevron": "03a",
          "crLogo": "02e",
          "cross": "03b",
          "download": "004",
          "swap": "038",
          "symbolCircle": "034",
          "thumbDownOutline": "001",
          "thumbUpOutline": "002",
          "trash": "036",
        },
        "lineHeights": Object {
          "large": 1.5,
          "regular": 1,
          "small": 1.25,
        },
        "radii": Object {
          "large": "6px",
          "larger": "12px",
          "small": "3px",
        },
        "shadows": Object {
          "elevation0": "0 0 1px rgba(37,39,45,0.47)",
          "elevation1": "0 0 1px rgba(37,39,45,0.47), 0 2px 4px -2px rgba(37,39,45,0.3)",
          "elevation2": "0 0 1px rgba(37,39,45,0.47), 0 5px 8px -4px rgba(37,39,45,0.3)",
          "elevation3": "0 0 1px rgba(37,39,45,0.47), 0 8px 10px -4px rgba(37,39,45,0.3)",
          "elevation4": "0 0 1px rgba(37,39,45,0.47), 0 16px 24px -8px rgba(37,39,45,0.3)",
        },
        "space": Object {
          "large": "1.5rem",
          "larger": "2rem",
          "largest": "4rem",
          "regular": "1rem",
          "small": "0.75rem",
          "smaller": "0.5rem",
          "smallest": "0.25rem",
        },
      }
    }
  >
    <Styled(div)
      color="#000000"
      diameter="40px"
      theme={
        Object {
          "avatarFontSizes": Object {
            "default": "0.6875rem",
            "medium": "0.75rem",
          },
          "avatarSizes": Object {
            "default": "24px",
            "medium": "32px",
          },
          "borderWidth": Object {
            "large": "4px",
            "medium": "2px",
            "small": "1px",
          },
          "borders": Object {
            "default": "1px solid #E0E1E2",
          },
          "brandFont": "Motiva Sans",
          "breakpoints": Array [
            "512px",
            "768px",
            "1024px",
            "1600px",
          ],
          "breakpointsMap": Object {
            "lg": "1024px",
            "md": "768px",
            "sm": "512px",
            "xl": "1600px",
          },
          "buttons": Object {
            "sizes": Object {
              "jumbo": Object {
                "fontSize": "0.875rem",
                "height": "3rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-1.5rem",
                  },
                  "&:last-child": Object {
                    "mr": "-1.5rem",
                  },
                  "fontSize": "1rem",
                  "width": "3rem",
                },
                "p": "0 1.5rem",
              },
              "large": Object {
                "fontSize": "0.875rem",
                "height": "2.5rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-1.25rem",
                  },
                  "&:last-child": Object {
                    "mr": "-1.25rem",
                  },
                  "fontSize": "0.875rem",
                  "width": "2.5rem",
                },
                "p": "0 1.25rem",
              },
              "medium": Object {
                "fontSize": "0.8125rem",
                "height": "2rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-1rem",
                  },
                  "&:last-child": Object {
                    "mr": "-1rem",
                  },
                  "fontSize": "0.75rem",
                  "width": "2rem",
                },
                "p": "0 1rem",
              },
              "small": Object {
                "fontSize": "0.75rem",
                "height": "1.5rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-0.75rem",
                  },
                  "&:last-child": Object {
                    "mr": "-0.75rem",
                  },
                  "fontSize": "0.6875rem",
                  "width": "1.5rem",
                },
                "p": "0 0.75rem",
              },
            },
          },
          "colors": Object {
            "background": Object {
              "default": "#F2F2F2",
              "disabled": "#EBECEC",
              "muted": "#F8F9F9",
              "white": "#FFFFFF",
            },
            "black": "#000000",
            "blue": "#4466EE",
            "blueDark": "#4455CC",
            "blueDarkest": "#2E374E",
            "blueLight": "#5577FF",
            "blueLighter": "#6688FF",
            "border": Object {
              "dark": "#5B5D61",
              "default": "#E0E1E2",
              "muted": "#EBECEC",
            },
            "brand": Object {
              "dark": "#081D17",
              "darker": "#081D17",
              "default": "#081D17",
              "light": "#B6EFD0",
              "lighter": "#C0F9DA",
            },
            "bronze": "#CC7700",
            "bronzeDark": "#AA5500",
            "bronzeLight": "#CC9900",
            "green": "#00AA44",
            "greenDark": "#008833",
            "greenLight": "#00BB44",
            "greenLighter": "#00CC66",
            "grey10": "#F8F9F9",
            "grey100": "#0F0F10",
            "grey20": "#F2F2F2",
            "grey30": "#EBECEC",
            "grey40": "#E0E1E2",
            "grey50": "#BEBEC0",
            "grey60": "#989A9C",
            "grey70": "#78797D",
            "grey80": "#5B5D61",
            "grey90": "#25272D",
            "icon": Object {
              "default": "#989A9C",
              "disabled": "rgba(190,190,192,0.7)",
            },
            "intent": Object {
              "brand": Object {
                "dark": "#081D17",
                "darker": "#081D17",
                "default": "#081D17",
                "light": "#B6EFD0",
                "lighter": "#C0F9DA",
              },
              "danger": Object {
                "dark": "#6c1c1c",
                "darker": "#2b0b0b",
                "default": "#D93838",
                "light": "#f3c3c3",
                "lighter": "#fbebeb",
              },
              "info": Object {
                "dark": "#213175",
                "darker": "#0d132e",
                "default": "#4263EB",
                "light": "#c6d0f9",
                "lighter": "#eceffd",
              },
              "success": Object {
                "dark": "#14431d",
                "darker": "#081a0b",
                "default": "#29863A",
                "light": "#bedac3",
                "lighter": "#e9f2eb",
              },
              "warning": Object {
                "dark": "#622902",
                "darker": "#271000",
                "default": "#C55205",
                "light": "#edcbb4",
                "lighter": "#f9ede6",
              },
            },
            "monochrome": Object {
              "black": "#000000",
              "grey10": "#F8F9F9",
              "grey100": "#0F0F10",
              "grey20": "#F2F2F2",
              "grey30": "#EBECEC",
              "grey40": "#E0E1E2",
              "grey50": "#BEBEC0",
              "grey60": "#989A9C",
              "grey70": "#78797D",
              "grey80": "#5B5D61",
              "grey90": "#25272D",
              "white": "#FFFFFF",
            },
            "palette": Object {
              "blue": Object {
                "dark": "#213175",
                "darker": "#0d132e",
                "default": "#4263EB",
                "light": "#c6d0f9",
                "lighter": "#eceffd",
              },
              "brand": Object {
                "dark": "#040e0b",
                "darker": "#010504",
                "default": "#081D17",
                "light": "#b4bbb9",
                "lighter": "#e6e8e7",
              },
              "cyan": Object {
                "dark": "#063f48",
                "darker": "#02191c",
                "default": "#0D7F91",
                "light": "#b6d8de",
                "lighter": "#e6f2f4",
              },
              "green": Object {
                "dark": "#14431d",
                "darker": "#081a0b",
                "default": "#29863A",
                "light": "#bedac3",
                "lighter": "#e9f2eb",
              },
              "neutral": Object {
                "dark": "#070708",
                "darker": "#020203",
                "default": "#0F0F10",
                "light": "#b7b7b7",
                "lighter": "#e7e7e7",
              },
              "orange": Object {
                "dark": "#622902",
                "darker": "#271000",
                "default": "#C55205",
                "light": "#edcbb4",
                "lighter": "#f9ede6",
              },
              "pink": Object {
                "dark": "#6b1936",
                "darker": "#2a0a15",
                "default": "#D6336C",
                "light": "#f2c1d2",
                "lighter": "#faeaf0",
              },
              "purple": Object {
                "dark": "#382474",
                "darker": "#160e2e",
                "default": "#7048E8",
                "light": "#d4c8f8",
                "lighter": "#f0ecfc",
              },
              "red": Object {
                "dark": "#6c1c1c",
                "darker": "#2b0b0b",
                "default": "#D93838",
                "light": "#f3c3c3",
                "lighter": "#fbebeb",
              },
              "teal": Object {
                "dark": "#044231",
                "darker": "#011a13",
                "default": "#098562",
                "light": "#b5dacf",
                "lighter": "#e6f2ef",
              },
              "yellow": Object {
                "dark": "#513400",
                "darker": "#201400",
                "default": "#A36900",
                "light": "#e3d2b2",
                "lighter": "#f5f0e5",
              },
            },
            "primary": Object {
              "blue": "#4263EB",
              "cyan": "#0D7F91",
              "green": "#29863A",
              "neutral": "#0F0F10",
              "orange": "#C55205",
              "pink": "#D6336C",
              "purple": "#7048E8",
              "red": "#D93838",
              "teal": "#098562",
              "yellow": "#A36900",
            },
            "red": "#EE2200",
            "redDark": "#DD1100",
            "redLight": "#FF4444",
            "redLighter": "#FF6655",
            "secondary": Object {
              "blue": "#4B9BFF",
              "cyan": "#5FC8FF",
              "green": "#9BE169",
              "orange": "#FFB46E",
              "pink": "#FF73C3",
              "purple": "#AF78FF",
              "red": "#FF5F5F",
              "teal": "#50D2A0",
              "yellow": "#FFD76E",
            },
            "shadow": Object {
              "blurry": "rgba(37,39,45,0.3)",
              "border": "rgba(37,39,45,0.47)",
            },
            "text": Object {
              "dark": "#0F0F10",
              "default": "#25272D",
              "disabled": "rgba(120,121,125,0.7)",
              "muted": "#5B5D61",
              "placeholder": "#989A9C",
            },
            "white": "#FFFFFF",
          },
          "fontSizes": Object {
            "input": Object {
              "default": "0.875rem",
              "mobile": "1rem",
            },
            "size1": "0.6875rem",
            "size2": "0.75rem",
            "size3": "0.8125rem",
            "size4": "0.875rem",
            "size5": "1rem",
            "size6": "1.25rem",
            "size7": "1.5rem",
            "size8": "1.75rem",
            "size9": "2.125rem",
          },
          "fontWeights": Object {
            "bold": 700,
            "medium": 500,
            "regular": 400,
          },
          "fonts": Object {
            "default": "Motiva Sans",
            "icon": "Arbor",
          },
          "iconFontPrefix": "ar",
          "icons": Object {
            "annotation": "039",
            "calendar": "035",
            "caret": "037",
            "chatBubbleOutline": "003",
            "checkboxChecked": "030",
            "checkboxIndeterminate": "02f",
            "checkboxMarkedCircleOutline": "000",
            "chevron": "03a",
            "crLogo": "02e",
            "cross": "03b",
            "download": "004",
            "swap": "038",
            "symbolCircle": "034",
            "thumbDownOutline": "001",
            "thumbUpOutline": "002",
            "trash": "036",
          },
          "lineHeights": Object {
            "large": 1.5,
            "regular": 1,
            "small": 1.25,
          },
          "radii": Object {
            "large": "6px",
            "larger": "12px",
            "small": "3px",
          },
          "shadows": Object {
            "elevation0": "0 0 1px rgba(37,39,45,0.47)",
            "elevation1": "0 0 1px rgba(37,39,45,0.47), 0 2px 4px -2px rgba(37,39,45,0.3)",
            "elevation2": "0 0 1px rgba(37,39,45,0.47), 0 5px 8px -4px rgba(37,39,45,0.3)",
            "elevation3": "0 0 1px rgba(37,39,45,0.47), 0 8px 10px -4px rgba(37,39,45,0.3)",
            "elevation4": "0 0 1px rgba(37,39,45,0.47), 0 16px 24px -8px rgba(37,39,45,0.3)",
          },
          "space": Object {
            "large": "1.5rem",
            "larger": "2rem",
            "largest": "4rem",
            "regular": "1rem",
            "small": "0.75rem",
            "smaller": "0.5rem",
            "smallest": "0.25rem",
          },
        }
      }
    >
      <Noop />
      <div
        className="emotion-0"
        color="#000000"
      >
        <Styled(div)
          color="#000000"
          key="0"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="1"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="2"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="3"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="4"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="5"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="6"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="7"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="8"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="9"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="10"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
        <Styled(div)
          color="#000000"
          key="11"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#000000"
          />
        </Styled(div)>
      </div>
    </Styled(div)>
  </Spinner>
</WithTheme(Spinner)>
`;

exports[`<Spinner /> spinner is spinning theme color is provided properly renders a spinner 1`] = `
@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0.5;
    -webkit-transform: scale(0.6);
    -moz-transform: scale(0.6);
    -ms-transform: scale(0.6);
    transform: scale(0.6);
  }

  40% {
    opacity: 1;
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

@keyframes animation-0 {
  0%, 39%, 100% {
    opacity: 0.5;
    -webkit-transform: scale(0.6);
    -moz-transform: scale(0.6);
    -ms-transform: scale(0.6);
    transform: scale(0.6);
  }

  40% {
    opacity: 1;
    -webkit-transform: scale(1);
    -moz-transform: scale(1);
    -ms-transform: scale(1);
    transform: scale(1);
  }
}

.emotion-0 {
  font-family: Motiva Sans;
  color: #4263EB;
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  position: relative;
}

.emotion-1 {
  font-family: Motiva Sans;
  color: #4263EB;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-1:before {
  content: '';
  display: block;
  width: 15%;
  height: 15%;
  background-color: #4263EB;
  border-radius: 100%;
  -webkit-animation: animation-0 1.2s infinite ease-in-out both;
  animation: animation-0 1.2s infinite ease-in-out both;
}

.emotion-1:nth-child(1) {
  -webkit-transform: rotate(30deg);
  -moz-transform: rotate(30deg);
  -ms-transform: rotate(30deg);
  transform: rotate(30deg);
}

.emotion-1:nth-child(2) {
  -webkit-transform: rotate(60deg);
  -moz-transform: rotate(60deg);
  -ms-transform: rotate(60deg);
  transform: rotate(60deg);
}

.emotion-1:nth-child(3) {
  -webkit-transform: rotate(90deg);
  -moz-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.emotion-1:nth-child(4) {
  -webkit-transform: rotate(120deg);
  -moz-transform: rotate(120deg);
  -ms-transform: rotate(120deg);
  transform: rotate(120deg);
}

.emotion-1:nth-child(5) {
  -webkit-transform: rotate(150deg);
  -moz-transform: rotate(150deg);
  -ms-transform: rotate(150deg);
  transform: rotate(150deg);
}

.emotion-1:nth-child(6) {
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-1:nth-child(7) {
  -webkit-transform: rotate(210deg);
  -moz-transform: rotate(210deg);
  -ms-transform: rotate(210deg);
  transform: rotate(210deg);
}

.emotion-1:nth-child(8) {
  -webkit-transform: rotate(240deg);
  -moz-transform: rotate(240deg);
  -ms-transform: rotate(240deg);
  transform: rotate(240deg);
}

.emotion-1:nth-child(9) {
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
}

.emotion-1:nth-child(10) {
  -webkit-transform: rotate(300deg);
  -moz-transform: rotate(300deg);
  -ms-transform: rotate(300deg);
  transform: rotate(300deg);
}

.emotion-1:nth-child(11) {
  -webkit-transform: rotate(330deg);
  -moz-transform: rotate(330deg);
  -ms-transform: rotate(330deg);
  transform: rotate(330deg);
}

.emotion-1:nth-child(1):before {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}

.emotion-1:nth-child(2):before {
  -webkit-animation-delay: -1s;
  animation-delay: -1s;
}

.emotion-1:nth-child(3):before {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}

.emotion-1:nth-child(4):before {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}

.emotion-1:nth-child(5):before {
  -webkit-animation-delay: -0.7s;
  animation-delay: -0.7s;
}

.emotion-1:nth-child(6):before {
  -webkit-animation-delay: -0.6s;
  animation-delay: -0.6s;
}

.emotion-1:nth-child(7):before {
  -webkit-animation-delay: -0.5s;
  animation-delay: -0.5s;
}

.emotion-1:nth-child(8):before {
  -webkit-animation-delay: -0.4s;
  animation-delay: -0.4s;
}

.emotion-1:nth-child(9):before {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.emotion-1:nth-child(10):before {
  -webkit-animation-delay: -0.2s;
  animation-delay: -0.2s;
}

.emotion-1:nth-child(11):before {
  -webkit-animation-delay: -0.1s;
  animation-delay: -0.1s;
}

<WithTheme(Spinner)
  color="palette.blue.default"
  spin={true}
>
  <Spinner
    color="palette.blue.default"
    diameter="40px"
    spin={true}
    theme={
      Object {
        "avatarFontSizes": Object {
          "default": "0.6875rem",
          "medium": "0.75rem",
        },
        "avatarSizes": Object {
          "default": "24px",
          "medium": "32px",
        },
        "borderWidth": Object {
          "large": "4px",
          "medium": "2px",
          "small": "1px",
        },
        "borders": Object {
          "default": "1px solid #E0E1E2",
        },
        "brandFont": "Motiva Sans",
        "breakpoints": Array [
          "512px",
          "768px",
          "1024px",
          "1600px",
        ],
        "breakpointsMap": Object {
          "lg": "1024px",
          "md": "768px",
          "sm": "512px",
          "xl": "1600px",
        },
        "buttons": Object {
          "sizes": Object {
            "jumbo": Object {
              "fontSize": "0.875rem",
              "height": "3rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1.5rem",
                },
                "&:last-child": Object {
                  "mr": "-1.5rem",
                },
                "fontSize": "1rem",
                "width": "3rem",
              },
              "p": "0 1.5rem",
            },
            "large": Object {
              "fontSize": "0.875rem",
              "height": "2.5rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1.25rem",
                },
                "&:last-child": Object {
                  "mr": "-1.25rem",
                },
                "fontSize": "0.875rem",
                "width": "2.5rem",
              },
              "p": "0 1.25rem",
            },
            "medium": Object {
              "fontSize": "0.8125rem",
              "height": "2rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-1rem",
                },
                "&:last-child": Object {
                  "mr": "-1rem",
                },
                "fontSize": "0.75rem",
                "width": "2rem",
              },
              "p": "0 1rem",
            },
            "small": Object {
              "fontSize": "0.75rem",
              "height": "1.5rem",
              "i": Object {
                "&:first-child": Object {
                  "ml": "-0.75rem",
                },
                "&:last-child": Object {
                  "mr": "-0.75rem",
                },
                "fontSize": "0.6875rem",
                "width": "1.5rem",
              },
              "p": "0 0.75rem",
            },
          },
        },
        "colors": Object {
          "background": Object {
            "default": "#F2F2F2",
            "disabled": "#EBECEC",
            "muted": "#F8F9F9",
            "white": "#FFFFFF",
          },
          "black": "#000000",
          "blue": "#4466EE",
          "blueDark": "#4455CC",
          "blueDarkest": "#2E374E",
          "blueLight": "#5577FF",
          "blueLighter": "#6688FF",
          "border": Object {
            "dark": "#5B5D61",
            "default": "#E0E1E2",
            "muted": "#EBECEC",
          },
          "brand": Object {
            "dark": "#081D17",
            "darker": "#081D17",
            "default": "#081D17",
            "light": "#B6EFD0",
            "lighter": "#C0F9DA",
          },
          "bronze": "#CC7700",
          "bronzeDark": "#AA5500",
          "bronzeLight": "#CC9900",
          "green": "#00AA44",
          "greenDark": "#008833",
          "greenLight": "#00BB44",
          "greenLighter": "#00CC66",
          "grey10": "#F8F9F9",
          "grey100": "#0F0F10",
          "grey20": "#F2F2F2",
          "grey30": "#EBECEC",
          "grey40": "#E0E1E2",
          "grey50": "#BEBEC0",
          "grey60": "#989A9C",
          "grey70": "#78797D",
          "grey80": "#5B5D61",
          "grey90": "#25272D",
          "icon": Object {
            "default": "#989A9C",
            "disabled": "rgba(190,190,192,0.7)",
          },
          "intent": Object {
            "brand": Object {
              "dark": "#081D17",
              "darker": "#081D17",
              "default": "#081D17",
              "light": "#B6EFD0",
              "lighter": "#C0F9DA",
            },
            "danger": Object {
              "dark": "#6c1c1c",
              "darker": "#2b0b0b",
              "default": "#D93838",
              "light": "#f3c3c3",
              "lighter": "#fbebeb",
            },
            "info": Object {
              "dark": "#213175",
              "darker": "#0d132e",
              "default": "#4263EB",
              "light": "#c6d0f9",
              "lighter": "#eceffd",
            },
            "success": Object {
              "dark": "#14431d",
              "darker": "#081a0b",
              "default": "#29863A",
              "light": "#bedac3",
              "lighter": "#e9f2eb",
            },
            "warning": Object {
              "dark": "#622902",
              "darker": "#271000",
              "default": "#C55205",
              "light": "#edcbb4",
              "lighter": "#f9ede6",
            },
          },
          "monochrome": Object {
            "black": "#000000",
            "grey10": "#F8F9F9",
            "grey100": "#0F0F10",
            "grey20": "#F2F2F2",
            "grey30": "#EBECEC",
            "grey40": "#E0E1E2",
            "grey50": "#BEBEC0",
            "grey60": "#989A9C",
            "grey70": "#78797D",
            "grey80": "#5B5D61",
            "grey90": "#25272D",
            "white": "#FFFFFF",
          },
          "palette": Object {
            "blue": Object {
              "dark": "#213175",
              "darker": "#0d132e",
              "default": "#4263EB",
              "light": "#c6d0f9",
              "lighter": "#eceffd",
            },
            "brand": Object {
              "dark": "#040e0b",
              "darker": "#010504",
              "default": "#081D17",
              "light": "#b4bbb9",
              "lighter": "#e6e8e7",
            },
            "cyan": Object {
              "dark": "#063f48",
              "darker": "#02191c",
              "default": "#0D7F91",
              "light": "#b6d8de",
              "lighter": "#e6f2f4",
            },
            "green": Object {
              "dark": "#14431d",
              "darker": "#081a0b",
              "default": "#29863A",
              "light": "#bedac3",
              "lighter": "#e9f2eb",
            },
            "neutral": Object {
              "dark": "#070708",
              "darker": "#020203",
              "default": "#0F0F10",
              "light": "#b7b7b7",
              "lighter": "#e7e7e7",
            },
            "orange": Object {
              "dark": "#622902",
              "darker": "#271000",
              "default": "#C55205",
              "light": "#edcbb4",
              "lighter": "#f9ede6",
            },
            "pink": Object {
              "dark": "#6b1936",
              "darker": "#2a0a15",
              "default": "#D6336C",
              "light": "#f2c1d2",
              "lighter": "#faeaf0",
            },
            "purple": Object {
              "dark": "#382474",
              "darker": "#160e2e",
              "default": "#7048E8",
              "light": "#d4c8f8",
              "lighter": "#f0ecfc",
            },
            "red": Object {
              "dark": "#6c1c1c",
              "darker": "#2b0b0b",
              "default": "#D93838",
              "light": "#f3c3c3",
              "lighter": "#fbebeb",
            },
            "teal": Object {
              "dark": "#044231",
              "darker": "#011a13",
              "default": "#098562",
              "light": "#b5dacf",
              "lighter": "#e6f2ef",
            },
            "yellow": Object {
              "dark": "#513400",
              "darker": "#201400",
              "default": "#A36900",
              "light": "#e3d2b2",
              "lighter": "#f5f0e5",
            },
          },
          "primary": Object {
            "blue": "#4263EB",
            "cyan": "#0D7F91",
            "green": "#29863A",
            "neutral": "#0F0F10",
            "orange": "#C55205",
            "pink": "#D6336C",
            "purple": "#7048E8",
            "red": "#D93838",
            "teal": "#098562",
            "yellow": "#A36900",
          },
          "red": "#EE2200",
          "redDark": "#DD1100",
          "redLight": "#FF4444",
          "redLighter": "#FF6655",
          "secondary": Object {
            "blue": "#4B9BFF",
            "cyan": "#5FC8FF",
            "green": "#9BE169",
            "orange": "#FFB46E",
            "pink": "#FF73C3",
            "purple": "#AF78FF",
            "red": "#FF5F5F",
            "teal": "#50D2A0",
            "yellow": "#FFD76E",
          },
          "shadow": Object {
            "blurry": "rgba(37,39,45,0.3)",
            "border": "rgba(37,39,45,0.47)",
          },
          "text": Object {
            "dark": "#0F0F10",
            "default": "#25272D",
            "disabled": "rgba(120,121,125,0.7)",
            "muted": "#5B5D61",
            "placeholder": "#989A9C",
          },
          "white": "#FFFFFF",
        },
        "fontSizes": Object {
          "input": Object {
            "default": "0.875rem",
            "mobile": "1rem",
          },
          "size1": "0.6875rem",
          "size2": "0.75rem",
          "size3": "0.8125rem",
          "size4": "0.875rem",
          "size5": "1rem",
          "size6": "1.25rem",
          "size7": "1.5rem",
          "size8": "1.75rem",
          "size9": "2.125rem",
        },
        "fontWeights": Object {
          "bold": 700,
          "medium": 500,
          "regular": 400,
        },
        "fonts": Object {
          "default": "Motiva Sans",
          "icon": "Arbor",
        },
        "iconFontPrefix": "ar",
        "icons": Object {
          "annotation": "039",
          "calendar": "035",
          "caret": "037",
          "chatBubbleOutline": "003",
          "checkboxChecked": "030",
          "checkboxIndeterminate": "02f",
          "checkboxMarkedCircleOutline": "000",
          "chevron": "03a",
          "crLogo": "02e",
          "cross": "03b",
          "download": "004",
          "swap": "038",
          "symbolCircle": "034",
          "thumbDownOutline": "001",
          "thumbUpOutline": "002",
          "trash": "036",
        },
        "lineHeights": Object {
          "large": 1.5,
          "regular": 1,
          "small": 1.25,
        },
        "radii": Object {
          "large": "6px",
          "larger": "12px",
          "small": "3px",
        },
        "shadows": Object {
          "elevation0": "0 0 1px rgba(37,39,45,0.47)",
          "elevation1": "0 0 1px rgba(37,39,45,0.47), 0 2px 4px -2px rgba(37,39,45,0.3)",
          "elevation2": "0 0 1px rgba(37,39,45,0.47), 0 5px 8px -4px rgba(37,39,45,0.3)",
          "elevation3": "0 0 1px rgba(37,39,45,0.47), 0 8px 10px -4px rgba(37,39,45,0.3)",
          "elevation4": "0 0 1px rgba(37,39,45,0.47), 0 16px 24px -8px rgba(37,39,45,0.3)",
        },
        "space": Object {
          "large": "1.5rem",
          "larger": "2rem",
          "largest": "4rem",
          "regular": "1rem",
          "small": "0.75rem",
          "smaller": "0.5rem",
          "smallest": "0.25rem",
        },
      }
    }
  >
    <Styled(div)
      color="#4263EB"
      diameter="40px"
      theme={
        Object {
          "avatarFontSizes": Object {
            "default": "0.6875rem",
            "medium": "0.75rem",
          },
          "avatarSizes": Object {
            "default": "24px",
            "medium": "32px",
          },
          "borderWidth": Object {
            "large": "4px",
            "medium": "2px",
            "small": "1px",
          },
          "borders": Object {
            "default": "1px solid #E0E1E2",
          },
          "brandFont": "Motiva Sans",
          "breakpoints": Array [
            "512px",
            "768px",
            "1024px",
            "1600px",
          ],
          "breakpointsMap": Object {
            "lg": "1024px",
            "md": "768px",
            "sm": "512px",
            "xl": "1600px",
          },
          "buttons": Object {
            "sizes": Object {
              "jumbo": Object {
                "fontSize": "0.875rem",
                "height": "3rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-1.5rem",
                  },
                  "&:last-child": Object {
                    "mr": "-1.5rem",
                  },
                  "fontSize": "1rem",
                  "width": "3rem",
                },
                "p": "0 1.5rem",
              },
              "large": Object {
                "fontSize": "0.875rem",
                "height": "2.5rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-1.25rem",
                  },
                  "&:last-child": Object {
                    "mr": "-1.25rem",
                  },
                  "fontSize": "0.875rem",
                  "width": "2.5rem",
                },
                "p": "0 1.25rem",
              },
              "medium": Object {
                "fontSize": "0.8125rem",
                "height": "2rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-1rem",
                  },
                  "&:last-child": Object {
                    "mr": "-1rem",
                  },
                  "fontSize": "0.75rem",
                  "width": "2rem",
                },
                "p": "0 1rem",
              },
              "small": Object {
                "fontSize": "0.75rem",
                "height": "1.5rem",
                "i": Object {
                  "&:first-child": Object {
                    "ml": "-0.75rem",
                  },
                  "&:last-child": Object {
                    "mr": "-0.75rem",
                  },
                  "fontSize": "0.6875rem",
                  "width": "1.5rem",
                },
                "p": "0 0.75rem",
              },
            },
          },
          "colors": Object {
            "background": Object {
              "default": "#F2F2F2",
              "disabled": "#EBECEC",
              "muted": "#F8F9F9",
              "white": "#FFFFFF",
            },
            "black": "#000000",
            "blue": "#4466EE",
            "blueDark": "#4455CC",
            "blueDarkest": "#2E374E",
            "blueLight": "#5577FF",
            "blueLighter": "#6688FF",
            "border": Object {
              "dark": "#5B5D61",
              "default": "#E0E1E2",
              "muted": "#EBECEC",
            },
            "brand": Object {
              "dark": "#081D17",
              "darker": "#081D17",
              "default": "#081D17",
              "light": "#B6EFD0",
              "lighter": "#C0F9DA",
            },
            "bronze": "#CC7700",
            "bronzeDark": "#AA5500",
            "bronzeLight": "#CC9900",
            "green": "#00AA44",
            "greenDark": "#008833",
            "greenLight": "#00BB44",
            "greenLighter": "#00CC66",
            "grey10": "#F8F9F9",
            "grey100": "#0F0F10",
            "grey20": "#F2F2F2",
            "grey30": "#EBECEC",
            "grey40": "#E0E1E2",
            "grey50": "#BEBEC0",
            "grey60": "#989A9C",
            "grey70": "#78797D",
            "grey80": "#5B5D61",
            "grey90": "#25272D",
            "icon": Object {
              "default": "#989A9C",
              "disabled": "rgba(190,190,192,0.7)",
            },
            "intent": Object {
              "brand": Object {
                "dark": "#081D17",
                "darker": "#081D17",
                "default": "#081D17",
                "light": "#B6EFD0",
                "lighter": "#C0F9DA",
              },
              "danger": Object {
                "dark": "#6c1c1c",
                "darker": "#2b0b0b",
                "default": "#D93838",
                "light": "#f3c3c3",
                "lighter": "#fbebeb",
              },
              "info": Object {
                "dark": "#213175",
                "darker": "#0d132e",
                "default": "#4263EB",
                "light": "#c6d0f9",
                "lighter": "#eceffd",
              },
              "success": Object {
                "dark": "#14431d",
                "darker": "#081a0b",
                "default": "#29863A",
                "light": "#bedac3",
                "lighter": "#e9f2eb",
              },
              "warning": Object {
                "dark": "#622902",
                "darker": "#271000",
                "default": "#C55205",
                "light": "#edcbb4",
                "lighter": "#f9ede6",
              },
            },
            "monochrome": Object {
              "black": "#000000",
              "grey10": "#F8F9F9",
              "grey100": "#0F0F10",
              "grey20": "#F2F2F2",
              "grey30": "#EBECEC",
              "grey40": "#E0E1E2",
              "grey50": "#BEBEC0",
              "grey60": "#989A9C",
              "grey70": "#78797D",
              "grey80": "#5B5D61",
              "grey90": "#25272D",
              "white": "#FFFFFF",
            },
            "palette": Object {
              "blue": Object {
                "dark": "#213175",
                "darker": "#0d132e",
                "default": "#4263EB",
                "light": "#c6d0f9",
                "lighter": "#eceffd",
              },
              "brand": Object {
                "dark": "#040e0b",
                "darker": "#010504",
                "default": "#081D17",
                "light": "#b4bbb9",
                "lighter": "#e6e8e7",
              },
              "cyan": Object {
                "dark": "#063f48",
                "darker": "#02191c",
                "default": "#0D7F91",
                "light": "#b6d8de",
                "lighter": "#e6f2f4",
              },
              "green": Object {
                "dark": "#14431d",
                "darker": "#081a0b",
                "default": "#29863A",
                "light": "#bedac3",
                "lighter": "#e9f2eb",
              },
              "neutral": Object {
                "dark": "#070708",
                "darker": "#020203",
                "default": "#0F0F10",
                "light": "#b7b7b7",
                "lighter": "#e7e7e7",
              },
              "orange": Object {
                "dark": "#622902",
                "darker": "#271000",
                "default": "#C55205",
                "light": "#edcbb4",
                "lighter": "#f9ede6",
              },
              "pink": Object {
                "dark": "#6b1936",
                "darker": "#2a0a15",
                "default": "#D6336C",
                "light": "#f2c1d2",
                "lighter": "#faeaf0",
              },
              "purple": Object {
                "dark": "#382474",
                "darker": "#160e2e",
                "default": "#7048E8",
                "light": "#d4c8f8",
                "lighter": "#f0ecfc",
              },
              "red": Object {
                "dark": "#6c1c1c",
                "darker": "#2b0b0b",
                "default": "#D93838",
                "light": "#f3c3c3",
                "lighter": "#fbebeb",
              },
              "teal": Object {
                "dark": "#044231",
                "darker": "#011a13",
                "default": "#098562",
                "light": "#b5dacf",
                "lighter": "#e6f2ef",
              },
              "yellow": Object {
                "dark": "#513400",
                "darker": "#201400",
                "default": "#A36900",
                "light": "#e3d2b2",
                "lighter": "#f5f0e5",
              },
            },
            "primary": Object {
              "blue": "#4263EB",
              "cyan": "#0D7F91",
              "green": "#29863A",
              "neutral": "#0F0F10",
              "orange": "#C55205",
              "pink": "#D6336C",
              "purple": "#7048E8",
              "red": "#D93838",
              "teal": "#098562",
              "yellow": "#A36900",
            },
            "red": "#EE2200",
            "redDark": "#DD1100",
            "redLight": "#FF4444",
            "redLighter": "#FF6655",
            "secondary": Object {
              "blue": "#4B9BFF",
              "cyan": "#5FC8FF",
              "green": "#9BE169",
              "orange": "#FFB46E",
              "pink": "#FF73C3",
              "purple": "#AF78FF",
              "red": "#FF5F5F",
              "teal": "#50D2A0",
              "yellow": "#FFD76E",
            },
            "shadow": Object {
              "blurry": "rgba(37,39,45,0.3)",
              "border": "rgba(37,39,45,0.47)",
            },
            "text": Object {
              "dark": "#0F0F10",
              "default": "#25272D",
              "disabled": "rgba(120,121,125,0.7)",
              "muted": "#5B5D61",
              "placeholder": "#989A9C",
            },
            "white": "#FFFFFF",
          },
          "fontSizes": Object {
            "input": Object {
              "default": "0.875rem",
              "mobile": "1rem",
            },
            "size1": "0.6875rem",
            "size2": "0.75rem",
            "size3": "0.8125rem",
            "size4": "0.875rem",
            "size5": "1rem",
            "size6": "1.25rem",
            "size7": "1.5rem",
            "size8": "1.75rem",
            "size9": "2.125rem",
          },
          "fontWeights": Object {
            "bold": 700,
            "medium": 500,
            "regular": 400,
          },
          "fonts": Object {
            "default": "Motiva Sans",
            "icon": "Arbor",
          },
          "iconFontPrefix": "ar",
          "icons": Object {
            "annotation": "039",
            "calendar": "035",
            "caret": "037",
            "chatBubbleOutline": "003",
            "checkboxChecked": "030",
            "checkboxIndeterminate": "02f",
            "checkboxMarkedCircleOutline": "000",
            "chevron": "03a",
            "crLogo": "02e",
            "cross": "03b",
            "download": "004",
            "swap": "038",
            "symbolCircle": "034",
            "thumbDownOutline": "001",
            "thumbUpOutline": "002",
            "trash": "036",
          },
          "lineHeights": Object {
            "large": 1.5,
            "regular": 1,
            "small": 1.25,
          },
          "radii": Object {
            "large": "6px",
            "larger": "12px",
            "small": "3px",
          },
          "shadows": Object {
            "elevation0": "0 0 1px rgba(37,39,45,0.47)",
            "elevation1": "0 0 1px rgba(37,39,45,0.47), 0 2px 4px -2px rgba(37,39,45,0.3)",
            "elevation2": "0 0 1px rgba(37,39,45,0.47), 0 5px 8px -4px rgba(37,39,45,0.3)",
            "elevation3": "0 0 1px rgba(37,39,45,0.47), 0 8px 10px -4px rgba(37,39,45,0.3)",
            "elevation4": "0 0 1px rgba(37,39,45,0.47), 0 16px 24px -8px rgba(37,39,45,0.3)",
          },
          "space": Object {
            "large": "1.5rem",
            "larger": "2rem",
            "largest": "4rem",
            "regular": "1rem",
            "small": "0.75rem",
            "smaller": "0.5rem",
            "smallest": "0.25rem",
          },
        }
      }
    >
      <Noop />
      <div
        className="emotion-0"
        color="#4263EB"
      >
        <Styled(div)
          color="#4263EB"
          key="0"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="1"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="2"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="3"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="4"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="5"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="6"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="7"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="8"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="9"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="10"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
        <Styled(div)
          color="#4263EB"
          key="11"
        >
          <Noop />
          <div
            className="emotion-1"
            color="#4263EB"
          />
        </Styled(div)>
      </div>
    </Styled(div)>
  </Spinner>
</WithTheme(Spinner)>
`;
